[package]
name = "ephemeris"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Ephemeris deniable encryption"
license = "MIT"

[lib]
name = "ephemeris"
crate-type = ["cdylib"]

[dependencies]
ephemeris-core = { path = "../ephemeris-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
