[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ephemeris"
version = "0.1.0"
description = "Message-level deniable encryption library"
readme = { file = "../README.md", content-type = "text/markdown" }
license = { file = "../LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Repository = "https://github.com/xiaohei/ephemeris"
